Settings: Add option to scramble pin layout when unlocking (1/2).
[spezi77] Adapted for AOSP based rom
Change-Id: I3e2c200a0a31d3c765831bc30280029a50c88051
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -154,4 +154,8 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Statusbar settings -->
     <string name="status_bar_settings_title">Statusleiste</string>
     <string name="status_bar_settings_summary">Statusleiste anpassen</string>
+
+    <!-- PIN scramble -->
+    <string name="unlock_scramble_pin_layout_title">Zufällig anordnen</string>
+    <string name="unlock_scramble_pin_layout_summary">Bei jedem Entsperrversuch das PIN-Layout zufällig neu wählen</string>
 </resources>
