--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -153,4 +153,8 @@ When the screen is off, the torch can be enabled with one of the following key c
     <!-- Statusbar settings -->
     <string name="status_bar_settings_title">Status bar</string>
     <string name="status_bar_settings_summary">Customize the status bar</string>
+
+    <!-- PIN scramble -->
+    <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
+    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
 </resources>
