Settings: Forward Port Volume Long Press Skip Tracks [2/3]
Bring Forward Volume Rocker Track Change

* Thanks Sahul Krishan for the great animation
* ritujb: Fix default value mismatch with framework in playback control

Change-Id: Ifa3d0987a0d54afd1f56e1d4a7488f428338c757
Signed-off-by: Mesquita <mesquita@aospa.co>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -91,4 +91,8 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Black theme -->
     <string name="system_black_theme_title">Schwarzes Hintergrund-Design</string>
     <string name="system_black_theme_summary">Schwarzen Hintergrund erzwingen</string>
+
+    <!-- Volume button music control -->
+    <string name="volume_button_music_control_title">Musikwiedergabe steuern</string>
+    <string name="volume_button_music_control_summary">Während das Display aus ist, lassen sich Musiktitel durch langes Drücken der Lautstärketasten überspringen.</string>
 </resources>
