--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -99,6 +99,13 @@
         android:fragment="com.android.settings.gestures.PowerMenuSettings"
         settings:controller="com.android.settings.gestures.PowerMenuPreferenceController" />
 
+    <!-- Volume button music control -->
+    <Preference
+        android:key="volume_button_music_control_summary"
+        android:title="@string/volume_button_music_control_title"
+        android:fragment="com.pixeldust.settings.gestures.volumerocker.VolumeButtonMusicControlGestureSettings"
+        settings:controller="com.pixeldust.settings.gestures.volumerocker.VolumeButtonMusicControlPreferenceController" />
+
     <com.android.settingslib.PrimarySwitchPreference
         android:key="gesture_prevent_ringing_summary"
         android:title="@string/gesture_prevent_ringing_screen_title"
