Allow to quickly open Running Services from QS panel [2/2]
neobuddy89: Updated for A12.

[spezi77] Not yet implemented in fw/b. Currently only a dependency for our Launcher3.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: str-br <alexfinhart@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -64,4 +64,6 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="global_actions_advanced_reboot_title">Erweitertes Neustart-Menü</string>
     <string name="global_actions_advanced_reboot_summary">Weitere Neustartoptionen im Ein/Aus-Menü anzeigen</string>
 
+    <!-- Running services - Background processes tab -->
+    <string name="background_processes_settings_title">Hintergrundprozesse</string>
 </resources>
