--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -244,4 +244,9 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="status_bar_battery_percent_text_next">Neben dem Symbol</string>
     <string name="status_bar_battery_text_charging_title">Akku-Prozentzahl beim Laden</string>
     <string name="status_bar_battery_text_charging_summary">Akku-Prozentanzeige beim Laden immer anzeigen</string>
+
+    <!-- Screen off animation -->
+    <string name="screen_off_animation_title">Ausschaltanimation</string>
+    <string name="screen_off_animation_crt">Röhrenbildschirm (CRT)</string>
+    <string name="screen_off_animation_scale">Skalierung</string>
 </resources>
