--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -25,7 +25,8 @@
     <com.android.settingslib.widget.LayoutPreference
         android:key="pd_logo"
         android:layout="@layout/pixeldust_logo"
-        android:selectable="false"/>
+        android:clickable="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.CustomLogoPreferenceController"/>
 
     <!-- Android version -->
     <Preference
