Settings: Implement hide gestural navigation hint bar
Author: Jesse Chan <jc@lineageos.org>
Date:   Sun May 24 21:35:34 2020 +0800

    Settings: Implement hide gestural navigation hint bar [2/5]

    Change-Id: I14dd73414c9f7ee1b01f315c9eeae0fd3ac4f859
    Signed-off-by: Jesse Chan <jc@lineageos.org>

Author: Bruno Martins <bgcngm@gmail.com>
Date:   Wed Mar 16 23:25:06 2022 +0000

    gestures: Set navbar hint switch required package

    Just to avoid showing the preference if for some reason the
    package is not present.

    Change-Id: Ifbf3434d1ad86e19278555a0003e19f3d289e402

Change-Id: I1089683a0ad4561bc303006ae61897ff44fff0e9
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -182,4 +182,8 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Hotspot extras -->
     <string name="tethering_allow_vpn_upstreams_title">Clients gestatten VPNs zu verwenden</string>
     <string name="tethering_allow_vpn_upstreams_summary">Hotspot-Clients gestatten, die VPN-Verbindungen des Geräts für Upstream-Konnektivität zu verwenden</string>
+
+    <!-- Navigation bar hint -->
+    <string name="show_navbar_hint_title">Gesten-Navigationsleiste</string>
+    <string name="show_navbar_hint_summary">Horizontale Linie für die Gestenbedienung anzeigen</string>
 </resources>
