--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -409,4 +409,15 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Gaming mode -->
     <string name="gaming_mode_title">Game Space</string>
     <string name="gaming_mode_summary">Optionen für ein beeindruckendes Spielerlebnis</string>
+
+    <!-- Vibration patterns -->
+    <string name="vibration_pattern_title">Klingelton-Vibrationsmuster</string>
+    <string name="pattern_dzzz_dzzz">tsss-tsss</string>
+    <string name="pattern_dzzz_da">tsss-da</string>
+    <string name="pattern_mm_mm_mm">mm-mm-mm</string>
+    <string name="pattern_da_da_dzzz">da-da-tsss</string>
+    <string name="pattern_da_dzzz_da">da-tsss-da</string>
+    <string name="pattern_custom">benutzerdefiniert</string>
+    <string name="custom_vibration_pattern_title">Benutzerdefinierte Vibration</string>
+    <string name="custom_vibration_pattern_summary">Benutzerdefiniertes Vibrationsmuster festlegen</string>
 </resources>
