Settings: Partial import DotOS A11 About Phone design
* Import iconic info cards (rom, device name, storage) only
* Adapt to A13 QPR3
* Use colorAccent as logo background shape color so that we can enjoy monet

[spezi77 edits]
* Adapt to PixelDust ressources and logo

Change-Id: Id96a691b84a297415cce99ec239813253f28e1a7
Co-authored-by: IacobIonut01 <paulionut2003@gmail.com>
Signed-off-by: someone5678 <nemui3353@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -38,4 +38,10 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="use_photos_spoof_title">Unbegrenzter Google Fotos Speicherplatz</string>
     <string name="use_photos_spoof_summary">Dein Gerät wird als Pixel XL ausgewiesen, um kostenlos Videos und Fotos in verlustfreier Qualität bei Google Fotos zu speichern. Das bedeutet jedoch, dass Funktionen wie der Magic Eraser nicht mehr verfügbar sind.</string>
     <string name="photos_spoof_toast">Fotos-App neustarten, damit es wirksam wird</string>
+
+    <!-- About phone cards -->
+    <string name="storage_card_title">Speicher</string>
+    <string name="storage_card_info">Belegt</string>
+    <string name="about_device_rom_title">Android %s</string>
+    <string name="about_device_nearby">Der Gerätename kann von Geräten in der Nähe gelesen werden.</string>
 </resources>
