Settings: Implement Island notification feature [2/2]
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -344,4 +344,8 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Quick settings styles -->
     <string name="theme_customization_quicksettings_tiles_title">Schnelleinstellungen</string>
     <string name="theme_customization_quicksettings_tiles_summary">Stil für die QS-Kacheln festlegen</string>
+
+    <!-- Island notification reTicker -->
+    <string name="island_notification_title">Island Notification reTicker</string>
+    <string name="island_notification_summary">Ersetzt Pop-up-Benachrichtigungen durch eine schlanke und weniger aufdringliche Variante</string>
 </resources>
