--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -351,4 +351,8 @@ When the screen is off, the torch can be enabled with one of the following key c
     <!-- Quick settings styles -->
     <string name="theme_customization_quicksettings_tiles_title">QS tiles style</string>
     <string name="theme_customization_quicksettings_tiles_summary">Set custom QS tiles style</string>
+
+    <!-- Island notification reTicker -->
+    <string name="island_notification_title">Island notification reTicker</string>
+    <string name="island_notification_summary">Replace heads-up notification with slim and less invasive version of redesigned ticker</string>
 </resources>
