Global VPN feature [2/2]
* Create a global VPN toggle for VPNs in the system user. It is only
  enabled when no VPN is active in any user.

Change-Id: Ic3b79beb635afe03642fce9473bc481239166566
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -209,4 +209,10 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="gesture_navbar_radius_title">Radius der Pille</string>
     <string name="thin_label">Dünn</string>
     <string name="thick_label">Dick</string>
+
+    <!-- VPN app management screen, global VPN -->
+    <string name="global_vpn_title">Globales VPN</string>
+    <string name="global_vpn_summary">Den gesamten Datenverkehr auf dem Gerät über dieses VPN erzwingen, einschließlich Arbeitsprofil und anderer Benutzer.</string>
+    <string name="global_vpn_summary_on">Den gesamten Datenverkehr auf dem Gerät über dieses VPN erzwingen, einschließlich Arbeitsprofil und anderer Benutzer. Hinweis: Wenn diese Option aktiviert ist, kannst Du kein separates VPN in einem Arbeitsprofil oder anderen Benutzern verwenden.</string>
+    <string name="global_vpn_summary_any_vpn_active">Du musst zuerst alle aktiven VPN-Verbindungen deaktivieren, um diese Option zu aktivieren.</string>
 </resources>
