--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -80,4 +80,6 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="theme_customization_wifi_icon_title">WiFi-Symbol</string>
     <string name="theme_customization_wifi_icon_summary">Stil für das WiFi-Symbol festlegen</string>
     <string name="theme_customization_device_default">Gemäß Standard fürs Gerät</string>
+    <string name="theme_customization_navbar_title">Navigationsleiste</string>
+    <string name="theme_customization_navbar_summary">Stil für die 3-Tasten-Navigationsleiste festlegen</string>
 </resources>
