--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -196,4 +196,8 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="back_height_low_label">Ganzer Bildschirm</string>
     <string name="back_height_high_label">Unterer Bereich</string>
     <string name="back_height_message">Bereich festlegen, der für die Zurück-Geste verwendet wird.</string>
+
+    <!-- Back gesture animation -->
+    <string name="back_gesture_arrow_title">Animation der Zurück-Geste</string>
+    <string name="back_gesture_arrow_summary">Pfeil für die Zurück-Geste animieren</string>
 </resources>
