Optional haptic feedback on back gesture [2/2]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -200,4 +200,8 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Back gesture animation -->
     <string name="back_gesture_arrow_title">Animation der Zurück-Geste</string>
     <string name="back_gesture_arrow_summary">Pfeil für die Zurück-Geste animieren</string>
+
+    <!-- Back gesture haptic -->
+    <string name="back_gesture_haptic_title">Haptik der Zurück-Geste</string>
+    <string name="back_gesture_haptic_summary">Bei Nutzung der Zurück-Geste vibirieren</string>
 </resources>
