--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -359,4 +359,20 @@ When the screen is off, the torch can be enabled with one of the following key c
     <!-- Statusbar colored icons -->
     <string name="statusbar_colored_icons_title">Colored icons</string>
     <string name="statusbar_colored_icons_summary">Use proper app icons for notification icons in status bar</string>
+
+    <!-- Global Power Menu -->
+    <string name="powermenu_title">Power menu customization</string>
+    <string name="powermenu_summary">Enable further power menu actions</string>
+    <string name="global_actions_menu_category">Actions</string>
+    <string name="global_actions_emergency">Emergency</string>
+    <string name="global_actions_lockdown">Lock down</string>
+    <string name="global_actions_power">Power</string>
+    <string name="global_actions_restart">Restart</string>
+    <string name="global_actions_logout">Logout</string>
+    <string name="global_actions_users">Switch user</string>
+    <string name="global_actions_screenshot">Screenshot</string>
+    <string name="global_actions_airplane">Aeroplane mode</string>
+    <string name="global_actions_soundpanel">Sound panel</string>
+    <string name="global_actions_settings">Settings</string>
+    <string name="global_actions_device_controls">Device control</string>
 </resources>
