--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -56,6 +56,12 @@
         android:summary="@string/global_actions_advanced_reboot_summary"
         android:defaultValue="false" />
 
+    <Preference
+        android:key="gesture_global_powermenu_summary"
+        android:title="@string/powermenu_title"
+        android:fragment="com.pixeldust.settings.gestures.powermenu.GlobalPowerMenuSettings"
+        settings:controller="com.pixeldust.settings.gestures.powermenu.GlobalPowerMenuPreferenceController" />
+
     <com.android.settingslib.widget.FooterPreference
         android:key="power_menu_power_volume_up_hint"
         android:title="@string/power_menu_power_volume_up_hint"
