Settings: Bring back all theme customisations [squashed] Squashed-in: * Bring back icon shapes, icon packs and fonts Customisation (AEX) * Customisation: Add signal and wifi icon style theming [2/3] (crDroid)
Co-authored-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>
Change-Id: I0a80a90faa83d94ec8652fc48faee8e1ae710f09

--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -66,4 +66,18 @@ When the screen is off, the torch can be enabled with one of the following key c
 
     <!-- Running services - Background processes tab -->
     <string name="background_processes_settings_title">Background processes</string>
+
+    <!-- Category for theme overlays -->
+    <string name="theme_customization_category">Theming</string>
+    <string name="theme_customization_font_title">Headline / Body font</string>
+    <string name="theme_customization_font_summary">Set system font style</string>
+    <string name="theme_customization_icon_pack_title">Icon pack</string>
+    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
+    <string name="theme_customization_icon_shape_title">Icon shape</string>
+    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
+    <string name="theme_customization_signal_icon_title">Signal icon style</string>
+    <string name="theme_customization_signal_icon_summary">Set custom signal icon style</string>
+    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
+    <string name="theme_customization_wifi_icon_summary">Set custom wifi icon style</string>
+    <string name="theme_customization_device_default">Device default</string>
 </resources>
