--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -66,4 +66,18 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
 
     <!-- Running services - Background processes tab -->
     <string name="background_processes_settings_title">Hintergrundprozesse</string>
+
+    <!-- Category for theme overlays -->
+    <string name="theme_customization_category">UI-Stil anpassen</string>
+    <string name="theme_customization_font_title">Überschrift / Schriftstil</string>
+    <string name="theme_customization_font_summary">Systemschriftart festlegen</string>
+    <string name="theme_customization_icon_pack_title">Icon-Pack</string>
+    <string name="theme_customization_icon_pack_summary">Icon-Pack festlegen</string>
+    <string name="theme_customization_icon_shape_title">Symbol-Stil</string>
+    <string name="theme_customization_icon_shape_summary">Form für Systemsymbole festlegen</string>
+    <string name="theme_customization_signal_icon_title">Signal-Symbol</string>
+    <string name="theme_customization_signal_icon_summary">Stil für das Mobilfunksignal-Symbol festlegen</string>
+    <string name="theme_customization_wifi_icon_title">WiFi-Symbol</string>
+    <string name="theme_customization_wifi_icon_summary">Stil für das WiFi-Symbol festlegen</string>
+    <string name="theme_customization_device_default">Gemäß Standard fürs Gerät</string>
 </resources>
