--- a/res/values/pixeldust_colors.xml
+++ b/res/values/pixeldust_colors.xml
@@ -6,4 +6,8 @@
 <resources>
     <!-- About phone cards -->
     <color name="contextual_card_stroke_color">#1f000000</color>
+
+    <color name="google_grey700">#5f6368</color>
+    <color name="edit_background_base">@color/google_grey700</color>
+    <color name="option_border_default">@color/edit_background_base</color>
 </resources>
