--- a/res/values/pixeldust_styles.xml
+++ b/res/values/pixeldust_styles.xml
@@ -11,4 +11,10 @@
     <declare-styleable name="DeviceCardView">
         <attr name="extra_title" format="string"/>
     </declare-styleable>
+    <style name="OptionTitleTextAppearance" parent="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:lineHeight">15sp</item>
+        <item name="android:textColor">?android:attr/textColorSecondary</item>
+    </style>
 </resources>
