--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -69,6 +69,7 @@ When the screen is off, the torch can be enabled with one of the following key c
 
     <!-- Category for theme overlays -->
     <string name="theme_customization_category">Theming</string>
+    <string name="theme_customization_summary">Customize the look &amp; feel</string>
     <string name="theme_customization_font_title">Headline / Body font</string>
     <string name="theme_customization_font_summary">Set system font style</string>
     <string name="theme_customization_icon_pack_title">Icon pack</string>
