--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -54,7 +54,7 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
 
     <!-- Status bar Icon Manager -->
     <string name="icon_manager_title">Statusleistensymbole</string>
-    <string name="icon_manager_summary">Statusleistensymbole konfigurieren</string>
+    <string name="icon_manager_summary">Festlegen welche Symbole angezeigt werden</string>
 
     <!-- Swipe to screenshot -->
     <string name="swipe_to_screenshot_title">Für Screenshot swipen</string>
