Settings: Add SysUI tuner layout options to button-navigation screen.
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -420,4 +420,14 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="pattern_custom">benutzerdefiniert</string>
     <string name="custom_vibration_pattern_title">Benutzerdefinierte Vibration</string>
     <string name="custom_vibration_pattern_summary">Benutzerdefiniertes Vibrationsmuster festlegen</string>
+
+    <!-- Navigation bar -->
+    <string name="navbar_layout_category_title">Layout Einstellungen</string>
+    <string name="navbar_layout_title">Layout</string>
+    <string name="navbar_layout_normal">Normal</string>
+    <string name="navbar_layout_compact">Kompakt</string>
+    <string name="navbar_layout_leftleaning">Links­bün­dig</string>
+    <string name="navbar_layout_rightleaning">Rechtsbündig</string>
+    <string name="navbar_invert_layout_title">Layout umkehren</string>
+    <string name="navbar_invert_layout_summary">Kehrt die Anordnung der Navigationsleiste und anderer Elemente, wie z. B. der Eingabemethodenauswahl, um</string>
 </resources>
