--- a/res/xml/clock_date_settings.xml
+++ b/res/xml/clock_date_settings.xml
@@ -30,6 +30,12 @@
         android:entryValues="@array/status_bar_clock_position_values"
         android:defaultValue="0"/>
 
+    <com.pixeldust.support.preference.SystemSettingSwitchPreference
+        android:key="status_bar_clock_seconds"
+        android:title="@string/status_bar_clock_show_seconds_title"
+        android:summary="@string/status_bar_clock_show_seconds_desc"
+        android:defaultValue="false"/>
+
     <com.pixeldust.support.preference.SecureSettingListPreference
         android:key="status_bar_am_pm"
         android:title="@string/status_bar_am_pm_title"
