--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -127,4 +127,8 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="ambient_display_screen_off_udfps_title">Long press on fingerprint sensor to unlock device</string>
     <!-- Summary text for screen off UDFPS [CHAR LIMIT=NONE]-->
     <string name="ambient_display_screen_off_udfps_summary">To wake up your screen and unlock, long press your under-display fingerprint sensor.</string>
+
+    <!-- QuickSettings settings -->
+    <string name="quicksettings_settings_title">Quick settings</string>
+    <string name="quicksettings_settings_summary">Customize the quick settings</string>
 </resources>
