Settings: Add QS pull down with one finger [2/2]
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -333,4 +333,10 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="color_source_preset">Preset</string>
     <string name="accent_color_title">Accent Color</string>
     <string name="accent_color_summary">Override default accent color</string>
+
+    <!-- Quick QS pulldown -->
+    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
+    <string name="quick_pulldown_none">Disabled</string>
+    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
+    <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
 </resources>
