--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -326,4 +326,10 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="color_source_preset">Voreinstellung</string>
     <string name="accent_color_title">Akzentfarbe</string>
     <string name="accent_color_summary">Überschreiben der standardmäßigen Akzentfarbe</string>
+
+    <!-- Quick QS pulldown -->
+    <string name="status_bar_quick_qs_pulldown">Schnelles Herunterziehen</string>
+    <string name="quick_pulldown_none">Deaktiviert</string>
+    <string name="quick_pulldown_right">Statusleiste von rechts nach unten ziehen</string>
+    <string name="quick_pulldown_left">Statusleiste von links nach unten ziehen</string>
 </resources>
