--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -131,4 +131,8 @@ When the screen is off, the torch can be enabled with one of the following key c
     <!-- QuickSettings settings -->
     <string name="quicksettings_settings_title">Quick settings</string>
     <string name="quicksettings_settings_summary">Customize the quick settings</string>
+
+    <!-- QS Transparency -->
+    <string name="qs_transparency_title">Background transparency</string>
+    <string name="qs_transparency_summary">Set transparency level for QS background</string>
 </resources>
