--- a/res/xml/quicksettings_settings.xml
+++ b/res/xml/quicksettings_settings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2022 The PixelDust Project
+     Copyright (C) 2022-2023 The PixelDust Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <PreferenceScreen
@@ -8,5 +8,15 @@
         xmlns:settings="http://schemas.android.com/apk/res-auto"
         android:key="quicksettings_settings"
         android:title="@string/quicksettings_settings_title">
+
+    <com.pixeldust.support.preference.SystemSettingSeekBarPreference
+        android:key="qs_transparency"
+        android:title="@string/qs_transparency_title"
+        android:summary="@string/qs_transparency_summary"
+        android:defaultValue="100"
+        settings:interval="1"
+        settings:units="%"
+        android:max="100"
+        settings:min="1" />
 
 </PreferenceScreen>
